fix service link line overlapping title

--- a/app/assets/stylesheets/panamax/service_details.scss
+++ b/app/assets/stylesheets/panamax/service_details.scss
@@ -30,6 +30,7 @@
     margin: 10px 0;
     padding-left: 40px;
     padding-right: 20px;
+    font-size: 14px;
   }
 
   .note {
@@ -523,6 +524,10 @@
 .service-links {
   @extend .service-detail;
 
+  > ul {
+    margin-top: 20px;
+  }
+
   > ul > li {
     margin-left: 20px;
     padding-left: 40px;
@@ -543,9 +548,9 @@
       content: '';
       border: $blue_grey 1px solid;
       border-width: 0 0 1px 1px;
-      height: 60px;
+      height: 45px;
       width: 20px;
-      top: -37px;
+      top: -20px;
       left: 0;
     }
 
